# imagenius

./: pyproject.toml
.github/: README.md
.github/workflows/: publish.yaml
gallery/: SOURCES.txt
imagenius/: __main__.py
src/imagenius/: cli.py  scan.py
src/imagenius/www/: index.html
