[project.scripts]
imagenius = "imagenius.__main__:main"


[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"


[project]
requires-python = ">=3.9"
version = "0.0.1"

name        = "imagenius"
description = "Automatically tag images based on their content."
readme      = ".github/README.md"
license     = "MIT"

dependencies = [
    "black",
    "flask",
    "requests",
    "transformers",
]
